# udev-xpath

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  test.xml
.github/workflows/: release.yml
examples/example/: main.rs
examples/example-multithread/: main.rs
src/: device.rs  lib.rs  main.rs  udev_tree.rs
