[package]
name = "udev-xpath"
version = "0.1.1"
edition = "2024"
description = "Match udev devices with xpath queries"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/esperto-input/udev-xpath"
repository = "https://github.com/esperto-input/udev-xpath.git"

[dependencies]
xee-xpath = "0.1.5"
xot = "0.31.2"
udev = "0.9.3"
tap = "1.0.1"
base64 = "0.22.1"
tokio = { version = "1.51.0", features = ["sync", "time"] }
tokio-udev = "0.10.0"
futures = "0.3.32"
indexmap = "2.14.0"
frozen-collections = "0.9.1"

[[example]]
name = "example"
required-features = ["examples"]

[[example]]
name = "example-multithread"
required-features = ["examples"]

[features]
examples = ["tokio/rt", "tokio/macros", "tokio/rt-multi-thread"]
